# cll-tda-ml-research-public

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
configs/: pipeline_config.yaml
data/synthetic/: README.md  synthetic_cll_public_baseline.csv  synthetic_cll_public_longitudinal.csv
docs/: clinical_variables.md  data_dictionary.md  methodology.md  project_plan.md  public_data_policy.md
notebooks/: 00_project_overview_and_data_dictionary.ipynb  01_data_audit_and_preprocessing.ipynb  02_endpoint_definition_and_cohort_selection.ipynb  03_baseline_ml_models.ipynb  04_survival_analysis_baseline.ipynb  05_geometric_patient_space_pca_umap.ipynb  06_tda_persistence_features.ipynb  07_hybrid_tda_ml_models.ipynb  08_dynamic_biological_clinical_mapping.ipynb  09_interpretability_robustness_and_final_figures.ipynb  README.md
scripts/: create_synthetic_dataset.py
src/data/: __init__.py  io.py
tests/: test_package_import.py  test_synthetic_dataset_script.py
