[project]
name = "cll-tda-ml-research"
version = "0.1.0"
description = "TDA and Machine Learning pipeline for dynamic biological-clinical mapping in chronic lymphocytic leukemia."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
